--- a/index.html
+++ b/index.html
@@ -57,4 +57,31 @@
             
             The source code for Android is available under free and open source software licenses. Google publishes most of the code under the Apache License version 2.0 and the rest, Linux kernel changes, under the GNU General Public License version 2.</p>
        </div>
+
+       <div class="backend">
+        <div class="backend-child">
+            <div class="camera">
+                <div class="camera-child1">
+                    <div class="camera-child2"></div>
+                </div>
+                <div class="down-camers">
+                    <div class="cam1">
+                        <div class="main"></div>
+                    </div>
+                    <div class="cam1" id="light">
+                        <div class="main" id="light"></div>
+                    </div>
+                    <div class="cam1" >
+                        <div class="main"></div>
+                    </div>
+                    <div class="cam1">
+                        <div class="main"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="brand-name">
+            <h1>Redmi</h1>
+           </div>
+       </div>
 </html>
